Bug 1898184 - Don't set the forPreview flag if the prefer_system_dialog pref is set, to avoid blocking forever in nsGlobalWindowOuter::Print.  a=dmeehan

Original Revision: https://phabricator.services.mozilla.com/D224950

Differential Revision: https://phabricator.services.mozilla.com/D226807